--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Lucandra provides a Lucene IndexReader and IndexWriter that interfaces with Cass
 
 To get started run the following:
 
-1. Setup cassandra with storage-conf.xml in config
+1. Setup Cassandra with storage-conf.xml in config
 
 2. ant lucandra.jar
 3. ant test -Dcassandra.host=127.0.0.1 -Dcassandra.port=9999 -Dcassandra.framed=false
@@ -28,9 +28,9 @@ then you can have a per-user index stored in this form. This is how the per user
  for term search is laid out for Inbox search at Facebook."
 
 Initially we implemented Lucene support with supercolumn as described but we ran into
-a msjor scaling issue when we tried to index all of wikipedia.
+a major scaling issue when we tried to index all of wikipedia.
 Turns out Cassandra keeps the supercolumn in memory for a given key.
-Also all columns for a key are tied to one cassandra node so we dont gain much scalibility this way.
+Also all columns for a key are tied to one cassandra node so we don't gain much scalability this way.
 
 Thankfully Cassandra recently added support for distributed ordered keys that
 allows us to use keys to store index terms without supercolumns.
@@ -38,7 +38,7 @@ allows us to use keys to store index terms without supercolumns.
 Implementation Notes
 ======================
 
-The lucandra cassandra config looks like this.
+The Lucandra Cassandra config looks like this.
 
 <Keyspaces>
   <Keyspace Name="Lucandra">
@@ -59,7 +59,7 @@ The lucandra cassandra config looks like this.
       "index_name/documentId" => { fieldName , value }
 
 
-The IndexReader caches terms agressivly during search and tries to avoid lots of back and forth with Cassandra.
+The IndexReader caches terms aggressively during search and tries to avoid lots of back and forth with Cassandra.
 
 
 What Works
@@ -67,10 +67,10 @@ What Works
 * Indexing (though slow for now)
 * Search
 * Sort
-* Wildcards and other lucene magic
+* Wildcards and other Lucene magic
 * Real-Time
 
-What's Missing
+What's Missing (for now)
 ==============
 * You can't delete/update
 * No normalizations are stored (no scoring)
