--- a/README
+++ b/README
@@ -3,10 +3,13 @@ http://twitter.com/tjake
 ==============================
 
 Lucandra provides a Lucene IndexReader and IndexWriter that interfaces with Cassandra.
+Before you get started you should read this:
+     http://blog.sematext.com/2010/02/09/lucandra-a-cassandra-based-lucene-backend/
+
 
 To get started run the following:
 
-1. Setup Cassandra 0.5 with storage-conf.xml in config
+1. Setup Cassandra 0.6 with storage-conf.xml in config
 
 2. ant lucandra.jar
 3. ant test -Dcassandra.host=127.0.0.1 -Dcassandra.port=9160 -Dcassandra.framed=false
@@ -65,7 +68,7 @@ What Works
 ==========
 * Real-Time index updates
 * No optimize() required
-* Indexing (though fairly slow for now)
+* Indexing 
 * Search
 * Sort
 * Delete
