--- a/README
+++ b/README
@@ -3,8 +3,12 @@ http://twitter.com/tjake
 ==============================
 
 Lucandra provides a Lucene IndexReader and IndexWriter that interfaces with Cassandra.
+Solr is also supported.
+
+
 Before you get started you should read this:
      http://blog.sematext.com/2010/02/09/lucandra-a-cassandra-based-lucene-backend/
+
 
 
 To get started run the following:
@@ -17,6 +21,15 @@ To get started run the following:
 #edit run-demo with appropriate settings (delicious clone)
 4. run_demo.sh -index bookmarks.tsv
 5. run_demo.sh -search title:linu*
+
+
+To try Solr example:
+
+1. Setup Cassandra 0.6 with storage-conf.xml in config
+2. ant lucandra.jar
+3. cd solr-example; java -jar start.jar
+4. cd exampledocs; ./post.sh *.xml
+5. surf to http://localhost:8983/solr/admin/
 
 
 Background
@@ -64,6 +77,7 @@ The Lucandra Cassandra config looks like this.
 
 The IndexReader caches terms aggressively during search and tries to avoid lots of back and forth with Cassandra.
 
+
 What Works
 ==========
 * Real-Time indexing (documents become available immediately)
@@ -77,3 +91,4 @@ What's Missing (for now)
 ==============
 * No normalizations are stored (no scoring)
 * You can't walk the documents with index reader
+* Faceting isn't yet supported
