--- a/README
+++ b/README
@@ -1,17 +1,22 @@
-Lucandra - Lucene on Cassandra
-http://twitter.com/tjake
-==============================
+Lucandra - A Cassandra Backend for Lucene/Solr
+  
+By Jake Luciani - http://twitter.com/tjake
+==============================================
 
 Lucandra provides a Lucene IndexReader and IndexWriter that interfaces with Cassandra.
 Solr is also supported.
 
 
-Before you get started you should read this:
+Before you get started you should read this article:
      http://blog.sematext.com/2010/02/09/lucandra-a-cassandra-based-lucene-backend/
 
+You can see Lucandra in action here:
+     http://sparse.ly
 
 
-To get started run the following:
+Bookmarks demo:
+==============
+Lucandra includes a delicious like bookmarks demo to get you started. to build run the following:
 
 1. Setup Cassandra 0.6 with storage-conf.xml in config
 
@@ -23,7 +28,9 @@ To get started run the following:
 5. run_demo.sh -search title:linu*
 
 
-To try Solr example:
+Solr example:
+=============
+Lucandra also supports Solr. to build run the following:
 
 1. Setup Cassandra 0.6 with storage-conf.xml in config
 2. ant lucandra.jar
